test/domains/vass/no-dom-field-error.good
no-dom-field-error.chpl:17: error: missing the field 'dom' in class 'GlobalArray', required in domain map implementations
